--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     },
     "dependencies": {
         "express": "^4.21.2",
+        "peerjs": "^1.5.4",
         "socket.io": "^4.8.1"
     }
 }
